did something idk

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
-	<head><title> Login </title></head>
+	<head>
+		<meta charset= "utf-8">
+		<title> Login </title>
+    <link rel=" stylesheet" href= "css/styles.css">
+	</head>
 
-	<body background="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAACoCAMAAABt9SM9AAAAA1BMVEX/wMversVBAAAAR0lEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO8GxYgAAb0jQ/cAAAAASUVORK5CYII=">
+	<body>
 		<center><h2>Clinic Patient Registration Form</h2></center>
 		<form>
-		  <fieldset>
+		  <fieldset><hr>
 			<legend>Primary Details</legend>
 			First Name<input type="text" name="firstname"><br><br>
 			Middle Name<input type="text" name="middle name"><br><br>
@@ -14,7 +18,7 @@
 			<br>
 			<br>
 
-		  <fieldset>		
+		  <fieldset><hr>
 			<legend>Gender</legend>
  			<input type="radio" name="gender" value="male">Male<br><br>
 			<input type="radio" name="gender" value="female">Female<br><br>
@@ -23,7 +27,7 @@
 			<br>
 			<br>
 
-		  <fieldset>
+		  <fieldset><hr>
 			<legend>Disease Type and Duration</legend>
 			 <select name="Disease type">
   				<option value="Malaria">Malaria</option>
@@ -31,27 +35,27 @@
   				<option value="Typhiod">Typhoid</option>
   				<option value="Cancer">Cancer</option>
 			</select>
-				
+
 				<br>
 				<input type="checkbox" name="duration" value="1week">a week<br>
 				<input type="checkbox" name="duration" value="1month">a month<br>
 				<input type="checkbox" name="duration" value="1year">a year<br>
 				<input type="checkbox" name="duration" value="morethanyear">More than a year<br>
-			 
-		  </fieldset> 
+
+		  </fieldset>
 			<br>
 			<br>
 
-		  <fieldset>
-			<legend>Feedback</legend>			
-			<textarea rows="10" cols="50">  </textarea>	
+		  <fieldset><hr>
+			<legend>Feedback</legend>
+			<textarea rows="10" cols="50">  </textarea>
 			<br>
 			<br>
 		  </fieldset>
-			
+
 			<br>
 			<input type="submit" value="Submit">
-		</form>	
+		</form>
 		<a href="resume.html">This is just a test for the a href tag and a website to upload!</a>
 	</body>
 </html>
