--- a/resume.html
+++ b/resume.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <link rel=" stylesheet" href= "css/styles.css">
 	<title> Resume </title>
- </head>
+</head>
 
  <body bgcolor="#000000">
 
-  <h2><font face="verdana" color="white" size="16"> RESUME </font> </h2>
+  <h2><font face="verdana" color="#3f72af" size="16" align="center">___________________RESUME______________________ </font> </h2>
 
   <br><br><br>
   <img src="propic.jpg" alt="Pic" width="200" height="200">
 
-    
-<h2><font size="2" face="verdana" color="white">-Technical Proficiencies-------------------- </h2>
-  
+
+<h2><font size="2" face="verdana" color="#112d4e">-Technical Proficiencies-------------------- </h2>
+
 <ul style="list-style-type:circle;">
   <li>Programming Languages: <b> Java, C, Python</b> </li>
   <li>Database: <b> MySQL </b> </li>
   <li>Operating Systems: <b> Windows 8, 10, Linux(ubuntu) </b> </li>
   <li>Ide: <b> Eclipse, Spyder </b> </li>
-  <li>Web Technologies: <b> HTML, CSS, Javascript </b> </li> 	
+  <li>Web Technologies: <b> HTML, CSS, Javascript </b> </li>
 </ul>
 
-<table style="background-color: #ff0000;" width:"100%" bordercolor="#ffffff" border="5">
+<h2><font size="2" face="verdana" color="#112d4e">-Tenure-------------------- </h2>
+<table style="background-color: #dbe2ef;" width:"100%" bordercolor="#ffffff" border="5">
   <tr>
     <th>Sr.No</th>
-    <th>Institute</th> 
+    <th>Institute</th>
     <th>Grade/CGPA/Percentile</th>
 	<td>Academic year</td>
 
   </tr>
   <tr>
     <td>1.</td>
-    <td>CSPS</td> 
+    <td>CSPS</td>
     <td>88.88</td>
 	<td>2008-2015</td>
   </tr>
   <tr>
     <td>2.</td>
-    <td>Ashok Vidyalaya</td> 
+    <td>Ashok Vidyalaya</td>
     <td>77.77</td>
 	<td>2015-2017</td>
   </tr>
   <tr>
     <td>3.</td>
-    <td>FRCRCE</td> 
+    <td>FRCRCE</td>
     <td>7.94</td>
 	<td>2017-2021 (expected)</td>
   </tr>
 </table>
 
-<h2><font size="2" face="verdana" color="white">-Academic Profieciencies-------------------- </h2>
+<h2><font size="2" face="verdana" color="#112d4e">-Academic Profieciencies-------------------- </h2>
 
 <ul style="list-style-type:circle;">
   <li>Played in college basket ball team for three years </li>
   <li>Got an All India rank of 223 in Technothlon organised by IIT Guwahati in year 2015</li>
   <li>Was The logistics incharge of the Mozilla Campus Club for the tenure 2018-19</b> </li>
   <li>Successfully organised a Hackathon, 7 Seminars and a Techtalk in the college for the academic year 2018-19</li>
-  <li>Watched GOT entire series in 3 days  </li> 	
+  <li>Watched GOT entire series in 3 days  </li>
 </ul>
  </font>
  </body>
