--- a/index.html
+++ b/index.html
@@ -10,56 +10,23 @@
 	</head>
 
 	<body>
-		<center><h2>Clinic Patient Registration Form</h2></center>
+		<center><h2>Website Registration Form</h2></center>
 		<form>
-		  <fieldset><hr>
-			<legend>Primary Details</legend>
+		  <div class="one"><hr>
+			Primary Details
 			First Name<input type="text" name="firstname"><br><br>
 			Middle Name<input type="text" name="middle name"><br><br>
 			Last Name<input type="text" name="last name"><br><br>
 			Email Id.<input type="email" name="email"><br>
-		  </fieldset>
-			<br>
-			<br>
+	  	</div>
+			<div class="two">
+			</div>
+			<div class="three">
+			</div>		
 
-		  <fieldset><hr>
-			<legend>Gender</legend>
- 			<input type="radio" name="gender" value="male">Male<br><br>
-			<input type="radio" name="gender" value="female">Female<br><br>
-			<input type="radio" name="gender" value="other">Others<br>
-		  </fieldset>
-			<br>
-			<br>
 
-		  <fieldset><hr>
-			<legend>Disease Type and Duration</legend>
-			 <select name="Disease type">
-  				<option value="Malaria">Malaria</option>
-  				<option value="Dengue">Dengue</option>
-  				<option value="Typhiod">Typhoid</option>
-  				<option value="Cancer">Cancer</option>
-			</select>
-
-				<br>
-				<input type="checkbox" name="duration" value="1week">a week<br>
-				<input type="checkbox" name="duration" value="1month">a month<br>
-				<input type="checkbox" name="duration" value="1year">a year<br>
-				<input type="checkbox" name="duration" value="morethanyear">More than a year<br>
-
-		  </fieldset>
-			<br>
-			<br>
-
-		  <fieldset><hr>
-			<legend>Feedback</legend>
-			<textarea rows="10" cols="50">  </textarea>
-			<br>
-			<br>
-		  </fieldset>
-
-			<br>
 			<input type="submit" value="Submit">
 		</form>
-		<a href="resume.html">This is just a test for the a href tag and a website to upload!</a>
+		<a href="resume.html">Tag Leads to my Resume</a>
 	</body>
 </html>
