trial atom commit

--- a/index.html
+++ b/index.html
@@ -10,23 +10,11 @@
 	</head>
 
 	<body>
-		<center><h2>Website Registration Form</h2></center>
-		<form>
-		  <div class="one"><hr>
-			Primary Details
-			First Name<input type="text" name="firstname"><br><br>
-			Middle Name<input type="text" name="middle name"><br><br>
-			Last Name<input type="text" name="last name"><br><br>
-			Email Id.<input type="email" name="email"><br>
-	  	</div>
-			<div class="two">
+		  <div class="one">
+	 		<h2>Abhi Ahirrao</h2>
 			</div>
-			<div class="three">
-			</div>		
-
-
-			<input type="submit" value="Submit">
-		</form>
-		<a href="resume.html">Tag Leads to my Resume</a>
+			<div class="two">
+				<img src="images\websitebg.png">
+			</div>
 	</body>
 </html>
